Remove Analysis section from camera ready version

--- a/Tex/src-DISC-camera-ready/document.tex
+++ b/Tex/src-DISC-camera-ready/document.tex
@@ -75,7 +75,7 @@ hand-crafting concurrent data structures.
 \input{introduction}
 %\input{preliminariesB}
 \input{algorithmB}
-\input{proof2}
+%\input{proof2}
 \input{evaluation2}
 \input{related}
 \input{discussion}
@@ -89,8 +89,8 @@ hand-crafting concurrent data structures.
 \bibliographystyle{abbrv}
 %
 
-\appendix
-\input{proof-appendix}
+%\appendix
+%\input{proof-appendix}
 %\input{results-appendix}
 
 
