camera ready with reference to full version

--- a/Tex/src-DISC-camera-ready/document.tex
+++ b/Tex/src-DISC-camera-ready/document.tex
@@ -26,7 +26,7 @@
 \author{Ivar Ekeland\inst{1} \and Roger Temam\inst{2}}
 \author{
 Maya Arbel\inst{1}\fnmsep\inst{2}
-\and Guy Golan Gueta\inst{1}  
+\and Guy Golan-Gueta\inst{1}  
 \and Eshcar Hillel\inst{1}  
 \and Idit Keidar\inst{1}\fnmsep\inst{2}} 
 \institute{Yahoo Labs, Haifa, Israel
