--- a/Tex/src-DISC-camera-ready/introduction.tex
+++ b/Tex/src-DISC-camera-ready/introduction.tex
@@ -56,7 +56,7 @@ memory updates, (as occurs in \emph{software transactional memory (STM)}~\cite{H
 
 
 % Properties of our transformation
-In the full version of the paper~\cite{} we show that our transformation preserves the external behavior (e.g., linearizability, serializability, and deadlock-freedom) of the original lock-based code; %formal proofs appear in Appendix~\ref{sec:formal-proof}.
+In the full version of the paper~\cite{fullversion} we show that our transformation preserves the external behavior (e.g., linearizability, serializability, and deadlock-freedom) of the original lock-based code; %formal proofs appear in Appendix~\ref{sec:formal-proof}.
 %In other words, if the original code is correct (in the sense of serializability, linearizability, and deadlock-freedom), so is the
 %transformed version. 
 Moreover, our transformation preserves 
