--- a/Tex/src-DISC-camera-ready/myRef.bib
+++ b/Tex/src-DISC-camera-ready/myRef.bib
@@ -1,3 +1,10 @@
+@misc {fullversion,
+title = {Towards Automatic Lock Removal for Scalable Synchronization (Full Version)},
+author = {Maya Arbel and Guy Golan-Gueta and Eshcar Hillel and Idit Keidar}, 
+howpublished= "\url{http://admincms.labs.yahoo.com/publications/8476/towards-automatic-lock-removal-scalable-synchronization-full-version}"
+}
+
+
 @article{DiceHKLM14,
   author    = {Dave Dice and
                Timothy L. Harris and
