--- a/Tex/src-Full-Version/document.tex
+++ b/Tex/src-Full-Version/document.tex
@@ -24,10 +24,10 @@
 \begin{document}
 
 
-\title{Towards Automatic Lock Removal\\ for Scalable Synchronization}
+\title{Towards Automatic Lock Removal for Scalable Synchronization}
 \author{
 Maya Arbel\footnotemark[1] \footnotemark[2] \hspace{0.3in} 
-Guy Golan Gueta\footnotemark[1]  \hspace{0.3in}
+Guy Golan-Gueta\footnotemark[1]  \hspace{0.3in}
 Eshcar Hillel\footnotemark[1]  \hspace{0.3in}
 Idit Keidar\footnotemark[1] \footnotemark[2]\\
 \\
