--- a/Tex/src-Full-Version/proof-appendix.tex
+++ b/Tex/src-Full-Version/proof-appendix.tex
@@ -227,8 +227,7 @@ and $\alpha_i^{''}\beta_{i_1}^{''}\delta_i\beta_{i_2}^{''}\gamma_i^{'}$ are
 indistinguishable to all operations in $\op\setminus\{op_{i}\}$. 
 
 The indistinguishability and the induction hypothesis imply that Conditions~\ref{cond:locks},~\ref{cond:writes},~\ref{cond:trylocks} hold.
-In addition, this implies that all completed operations return the same value in $\pi_{i+1}$ and $\pi'$, which
-means Condition~\ref{cond:equiv} holds.
+In addition, this implies that all completed operations return the same value in $\pi_{i+1}$ and $\pi'$, hence Condition~\ref{cond:equiv} holds.
 
 %It is left to show that $\pi_{i+1}$ satisfies
 %Conditions~\ref{cond:locks},~\ref{cond:writes},~\ref{cond:trylocks}.
