updated bib + maya thanks hpi

--- a/Tex/src-DISC-camera-ready/myRef.bib
+++ b/Tex/src-DISC-camera-ready/myRef.bib
@@ -1,7 +1,7 @@
 @misc {fullversion,
 title = {Towards Automatic Lock Removal for Scalable Synchronization (Full Version)},
 author = {Maya Arbel and Guy Golan-Gueta and Eshcar Hillel and Idit Keidar}, 
-howpublished= "\url{http://admincms.labs.yahoo.com/publications/8476/towards-automatic-lock-removal-scalable-synchronization-full-version}"
+howpublished= "\url{https://labs.yahoo.com/publications/8476/towards-automatic-lock-removal-\ scalable-synchronization-full-version}"
 }
 
 
@@ -451,7 +451,7 @@ year = {2010},
     author = {Joe Duffy},
     title = {A (brief) retrospective on transactional memory},
     year = {2010},
-    note = {\url{http://joeduffyblog.com/2010/01/03/\\a-brief-retrospective-on-transactional-memory/}}
+    note = {\url{http://joeduffyblog.com/2010/01/03/a-brief-retrospective-on-\\transactional-memory}}
 }
 
 @article{Cascaval:2008,
