--- a/Tex/src-DISC-camera-ready/document.tex
+++ b/Tex/src-DISC-camera-ready/document.tex
@@ -25,7 +25,7 @@
 
 \author{Ivar Ekeland\inst{1} \and Roger Temam\inst{2}}
 \author{
-Maya Arbel\inst{1}\fnmsep\inst{2}
+Maya Arbel\thanks{Maya Arbel is supported in part by the Technion Hasso Platner Institute (HPI) Research School.}\inst{1}\fnmsep\inst{2}
 \and Guy Golan-Gueta\inst{1}  
 \and Eshcar Hillel\inst{1}  
 \and Idit Keidar\inst{1}\fnmsep\inst{2}} 
