fix broken cite to full version

--- a/Tex/src-DISC-camera-ready/algorithmB.tex
+++ b/Tex/src-DISC-camera-ready/algorithmB.tex
@@ -42,7 +42,7 @@ The operations interact via \emph{shared memory variables}, which are also calle
 Each shared object supports atomic \emph{read} (load) and \emph{write} (store) instructions.
 %
 %Below, we extend shared objects to also support locks.
-More formal definitions appear in the full version~\cite{}. 
+More formal definitions appear in the full version~\cite{fullversion}. 
 
 In addition, each shared object is associated with a lock, which can be unique to the object or common to several (or even all) objects. 
 The object supports atomic \emph{lock} and \emph{unlock} instructions.
